manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-svc
spec:
  type: NodePort
  selector:
    app: todos
  ports:
    - name: http
      port: 1234
      targetPort: 4000
